--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@ name: CI
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,7 +23,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: touch ronald.txt
+        run: |
+            touch ronald.txt
+            echo ah pronto >> ronald.txt
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
